--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
                     <input class="form-control" ng-model="airport.airportId" required="" placeholder="Mã sân bay">
                 </td>
                 <td>
-                    <input class="form-control" ng-model="airport.name" placeholder="Tên sân bay">
+                    <input class="form-control" ng-model="airport.name" placeholder="Tên sân bay" required="">
                 </td>
 
                 <td>
@@ -86,10 +86,10 @@
                 <td>{{item.arrival}}</td>
                 <td>{{item.date}}</td>
                 <td>{{item.time}}</td>
-                <td>{{item.class}}</td>
-                <td>{{item.price}}</td>
-                <td>{{item.total_seat}}</td>
-                <td>{{item.cost}}</td>
+                <td>{{item.info[0].class}}</td>
+                <td>{{item.info[0].price}}</td>
+                <td>{{item.info[0].total_seat}}</td>
+                <td>{{item.info[0].cost}}</td>
                 <td>
                     <div class="btn-group">
                         <button type="button" class="btn-transparent" ng-click="delete(item)">
@@ -112,7 +112,7 @@
         </div>
         <div>model = {{flight.departure}}</div><br/>
         <div class="input-field col s12">
-            <select ng-model="flight.arrival">
+            <select ng-model="flight.arrival" >
                 <option value="" disabled selected>Chọn sân bay</option>
                 <option ng-repeat="item in airports" value="{{item.airportId}}">{{item.name}}({{item.airportId}})</option>
             </select>
@@ -120,8 +120,9 @@
         </div>
         <div>model = {{flight.arrival}}</div><br/>
         <input type="date"class="datepicker" ng-model="flight.date" required="" placeholder="ngày">
-        <input type="time" class="timepicker" ng-model="flight.time" placeholder="giờ">
-
+        <div>model = {{flight.date}}</div><br/>
+        <input type="time" class="timepicker" ng-model="flight.time" required="" placeholder="giờ">
+        <div>model = {{flight.time}}</div><br/>
         <h5>Thương gia linh hoạt</h5>
 
         <!--<div class="input-field col s12">-->
@@ -135,9 +136,8 @@
         <!--</div>-->
 
         <!--<input class="form-control" ng-model="flight.info.price" placeholder="Mức giá">-->
-        <input type="number" class="form-control" ng-model="flight.info[0].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[0].class='F'">
-        <input class="form-control" ng-model="flight.info[0].cost" required=""
-               placeholder="Giá">
+        <input type="number" class="form-control" ng-model="flight.info[0].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[0].class='BF'">
+        <input class="form-control" ng-model="flight.info[0].cost" required="" placeholder="Giá">
 
         <h5>Thương gia tiêu chuẩn</h5>
 
@@ -152,9 +152,24 @@
         <!--</div>-->
 
         <!--<input class="form-control" ng-model="flight.info.price" placeholder="Mức giá">-->
-        <input type="number" class="form-control" ng-model="flight.info[1].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[1].class='E'">
-        <input class="form-control" ng-model="flight.info[1].cost" required=""
-               placeholder="Giá">
+        <input type="number" class="form-control" ng-model="flight.info[1].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[1].class='BS'">
+        <input class="form-control" ng-model="flight.info[1].cost" required="" placeholder="Giá">
+
+        <h5>Phổ thông linh hoạt</h5>
+        <input type="number" class="form-control" ng-model="flight.info[2].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[2].class='BS'">
+        <input class="form-control" ng-model="flight.info[2].cost" required="" placeholder="Giá">
+
+        <h5>Phổ thông tiêu chuẩn</h5>
+        <input type="number" class="form-control" ng-model="flight.info[3].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[3].class='BS'">
+        <input class="form-control" ng-model="flight.info[3].cost" required="" placeholder="Giá">
+
+        <h5>Phổ thông tiết kiệm</h5>
+        <input type="number" class="form-control" ng-model="flight.info[4].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[4].class='BS'">
+        <input class="form-control" ng-model="flight.info[4].cost" required="" placeholder="Giá">
+
+        <h5>Phổ thông tiêu chuẩn</h5>
+        <input type="number" class="form-control" ng-model="flight.info[5].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[5].class='BS'">
+        <input class="form-control" ng-model="flight.info[5].cost" required="" placeholder="Giá">
 
         <div>model = {{flight.info}}</div><br/>
 
