--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="stylesheets/materialize.css">
-    <link rel="stylesheet" href="stylesheets/ngProgress.css">
-    <link rel="stylesheet" href="stylesheets/toaster.css">
+    <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" href="stylesheets/daterangepicker.css">
     <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 <body ng-cloak ng-app="app">
@@ -85,10 +84,10 @@
                 <td>{{item.arrival}}</td>
                 <td>{{item.date}}</td>
                 <td>{{item.time}}</td>
-                <td>{{item.info[0].class}}</td>
-                <td>{{item.info[0].price}}</td>
-                <td>{{item.info[0].total_seat}}</td>
-                <td>{{item.info[0].cost}}</td>
+                <td>{{item.class}}</td>
+                <td>{{item.price}}</td>
+                <td>{{item.total_seat}}</td>
+                <td>{{item.cost}}</td>
                 <td>
                     <div class="btn-group">
                         <button type="button" class="btn-transparent" ng-click="delete(item)">
@@ -97,82 +96,45 @@
                     </div>
                 </td>
             </tr>
-
-
             </tbody>
         </table>
+
         <input class="form-control" ng-model="flight.flightId" required="" placeholder="Mã chuyến bay">
+
         <div class="input-field col s12">
             <select ng-model="flight.departure" onchange="">
                 <option value="" disabled selected>Chọn sân bay</option>
-                <option ng-repeat="item in airports" value="{{item.airportId}}">{{item.name}}({{item.airportId}})</option>
+                <option ng-repeat="item in airports" value="{{item.airportId}}">{{item.name}}({{item.airportId}})
+                </option>
             </select>
             <label>Sân bay đi</label>
         </div>
-        <div>model = {{flight.departure}}</div><br/>
+        <div>model = {{flight.departure}}</div>
+
+        <br/>
+
         <div class="input-field col s12">
-            <select ng-model="flight.arrival" >
+            <select ng-model="flight.arrival">
                 <option value="" disabled selected>Chọn sân bay</option>
-                <option ng-repeat="item in airports" value="{{item.airportId}}">{{item.name}}({{item.airportId}})</option>
+                <option ng-repeat="item in airports" value="{{item.airportId}}">{{item.name}}({{item.airportId}})
+                </option>
             </select>
             <label>Sân bay đi</label>
         </div>
-        <div>model = {{flight.arrival}}</div><br/>
-        <input type="date"class="datepicker" ng-model="flight.date" required="" placeholder="ngày">
-        <div>model = {{flight.date}}</div><br/>
-        <input type="time" class="timepicker" ng-model="flight.time" required="" placeholder="giờ">
-        <div>model = {{flight.time}}</div><br/>
-        <h5>Thương gia linh hoạt</h5>
+        <div>model = {{flight.arrival}}</div>
+        <br/>
 
-        <!--<div class="input-field col s12">-->
-            <!--<select ng-model="flight.info[0].class" onchange="">-->
-                <!--<option value="" disabled selected>Chọn hạng vé</option>-->
-                <!--<option value="F">Hạng nhất</option>-->
-                <!--<option value="B">Hạng thương gia</option>-->
-                <!--<option value="E">Hạng phổ thông</option>-->
-            <!--</select>-->
-            <!--<label>Hạng</label>-->
-        <!--</div>-->
+        <input type="text" id="datetimepicker"/>
 
-        <!--<input class="form-control" ng-model="flight.info.price" placeholder="Mức giá">-->
-        <input type="number" class="form-control" ng-model="flight.info[0].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[0].class='BF'">
-        <input class="form-control" ng-model="flight.info[0].cost" required="" placeholder="Giá">
+        <div ng-repeat="item in info">
+            <h5>{{item}}</h5>
+            <input type="number" class="form-control" ng-model="flight.info[$index].total_seat" required=""
+                   placeholder="Số ghế">
+            <input class="form-control" ng-model="flight.info[$index].cost" required="" placeholder="Giá">
+        </div>
 
-        <h5>Thương gia tiêu chuẩn</h5>
-
-        <!--<div class="input-field col s12">-->
-            <!--<select ng-model="flight.info[1].class" onchange="">-->
-                <!--<option value="" disabled selected>Chọn hạng vé</option>-->
-                <!--<option value="F">Hạng nhất</option>-->
-                <!--<option value="B">Hạng thương gia</option>-->
-                <!--<option value="E">Hạng phổ thông</option>-->
-            <!--</select>-->
-            <!--<label>Hạng</label>-->
-        <!--</div>-->
-
-        <!--<input class="form-control" ng-model="flight.info.price" placeholder="Mức giá">-->
-        <input type="number" class="form-control" ng-model="flight.info[1].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[1].class='BS'">
-        <input class="form-control" ng-model="flight.info[1].cost" required="" placeholder="Giá">
-
-        <h5>Phổ thông linh hoạt</h5>
-        <input type="number" class="form-control" ng-model="flight.info[2].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[2].class='BS'">
-        <input class="form-control" ng-model="flight.info[2].cost" required="" placeholder="Giá">
-
-        <h5>Phổ thông tiêu chuẩn</h5>
-        <input type="number" class="form-control" ng-model="flight.info[3].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[3].class='BS'">
-        <input class="form-control" ng-model="flight.info[3].cost" required="" placeholder="Giá">
-
-        <h5>Phổ thông tiết kiệm</h5>
-        <input type="number" class="form-control" ng-model="flight.info[4].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[4].class='BS'">
-        <input class="form-control" ng-model="flight.info[4].cost" required="" placeholder="Giá">
-
-        <h5>Phổ thông tiêu chuẩn</h5>
-        <input type="number" class="form-control" ng-model="flight.info[5].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[5].class='BS'">
-        <input class="form-control" ng-model="flight.info[5].cost" required="" placeholder="Giá">
-
-        <div>model = {{flight.info}}</div><br/>
-
-        <button class="btn btn-lg" ng-click="add(flight)" ng-if="!flight._id" type="submit" ng-disabled="!flight_dashboard.$valid">
+        <button class="btn btn-lg" ng-click="add(flight)" ng-if="!flight._id" type="submit"
+                ng-disabled="!flight_dashboard.$valid">
             <span class="glyphicon glyphicon-plus">Thêm</span>
         </button>
     </form>
@@ -183,10 +145,12 @@
         toaster-options="{'time-out': 3000, 'close-button':true, 'animation-class': 'toast-top-center'}"></toaster-container>
 
 <script src="javascripts/jquery-3.1.1.min.js"></script>
-<script src="javascripts/materialize.js"></script>
 <script src="javascripts/angular.min.js"></script>
 <script src="javascripts/angular-resource.min.js"></script>
 <script src="javascripts/angular-animate.min.js"></script>
+<script src="javascripts/bootstrap.min.js"></script>
+<script src="javascripts/moment.min.js"></script>
+<script src="javascripts/daterangepicker.js"></script>
 <script src="javascripts/ngProgress.min.js"></script>
 <script src="javascripts/toaster.js"></script>
 <script src="app/app.js"></script>
