--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="stylesheets/materialize.css">
+    <!--<link rel="stylesheet" href="stylesheets/materialize.css">-->
     <link rel="stylesheet" href="stylesheets/ngProgress.css">
     <link rel="stylesheet" href="stylesheets/toaster.css">
     <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="stylesheets/angular-material.css">
+    <link rel="stylesheet" href="stylesheets/mdPickers.css">
 </head>
 <body ng-cloak ng-app="app">
-<h3>Admin Dashboard</h3>
+<h1>Admin Dashboard</h1>
 
 <div class="container" ng-controller="AirportController">
-    <h5>Airports Dashboard</h5>
+    <h3>Airports Dashboard</h3>
+
     <form name="airport_dashboard" novalidate>
         <table class="table">
             <thead>
@@ -25,6 +28,7 @@
                 <th></th>
             </tr>
             </thead>
+
             <tbody>
             <tr ng-repeat="item in airports">
                 <td>{{item.airportId}}</td>
@@ -36,21 +40,33 @@
                         </button>
                     </div>
                 </td>
+
             </tr>
 
             <tr>
                 <td>
-                    <input class="form-control" ng-model="airport.airportId" required="" placeholder="Mã sân bay">
-                </td>
-                <td>
-                    <input class="form-control" ng-model="airport.name" placeholder="Tên sân bay" required="">
+                    <!--<input class="form-control" ng-model="airport.airportId" required="" placeholder="Mã sân bay">-->
+                    <md-input-container>
+                        <label>Mã sân bay</label>
+                        <input required ng-model="airport.airportId">
+                    </md-input-container>
+
                 </td>
 
                 <td>
-                    <button class="btn btn-lg" ng-click="add(airport)" ng-if="!airport._id" type="submit"
-                            ng-disabled="!airport_dashboard.$valid">
+                    <!--<input class="form-control" ng-model="airport.name" placeholder="Tên sân bay" required="">-->
+                    <md-input-container>
+                        <label>Tên sân bay</label>
+                        <input required ng-model="airport.name">
+                    </md-input-container>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <md-button class="md-raised md-primary" ng-click="add(airport)" ng-if="!airport._id" type="submit"
+                               ng-disabled="!airport_dashboard.$valid">
                         <span class="glyphicon glyphicon-plus">Thêm</span>
-                    </button>
+                    </md-button>
                 </td>
             </tr>
             </tbody>
@@ -101,80 +117,114 @@
 
             </tbody>
         </table>
-        <input class="form-control" ng-model="flight.flightId" required="" placeholder="Mã chuyến bay">
-        <div class="input-field col s12">
-            <select ng-model="flight.departure" onchange="">
-                <option value="" disabled selected>Chọn sân bay</option>
-                <option ng-repeat="item in airports" value="{{item.airportId}}">{{item.name}}({{item.airportId}})</option>
-            </select>
-            <label>Sân bay đi</label>
+        <div>
+            <md-input-container>
+                <label>Mã chuyến bay</label>
+                <input required ng-model="flight.flightId">
+            </md-input-container>
         </div>
-        <div>model = {{flight.departure}}</div><br/>
-        <div class="input-field col s12">
-            <select ng-model="flight.arrival" >
-                <option value="" disabled selected>Chọn sân bay</option>
-                <option ng-repeat="item in airports" value="{{item.airportId}}">{{item.name}}({{item.airportId}})</option>
-            </select>
-            <label>Sân bay đi</label>
+        <div>
+            <md-input-container style="margin-right: 10px;">
+                <label>Sân bay đi</label>
+                <md-select required="" ng-model="flight.departure">
+                    <md-option ng-repeat="item in airports" value="{{item.airportId}}">
+                        {{item.name}}({{item.airportId}})
+                    </md-option>
+                </md-select>
+            </md-input-container>
         </div>
-        <div>model = {{flight.arrival}}</div><br/>
-        <input type="date"class="datepicker" ng-model="flight.date" required="" placeholder="ngày">
-        <div>model = {{flight.date}}</div><br/>
-        <input type="time" class="timepicker" ng-model="flight.time" required="" placeholder="giờ">
-        <div>model = {{flight.time}}</div><br/>
+        <div>model = {{flight.departure}}</div>
+        <div>
+            <md-input-container style="margin-right: 10px;">
+                <label>Sân bay đến</label>
+                <md-select required="" ng-model="flight.arrival">
+                    <md-option ng-repeat="item in airports" value="{{item.airportId}}">
+                        {{item.name}}({{item.airportId}})
+                    </md-option>
+                </md-select>
+            </md-input-container>
+        </div>
+        <div>model = {{flight.arrival}}</div>
+
+        <!--<input type="date" class="datepicker" ng-model="flight.date" required="" placeholder="ngày">-->
+        <div>
+            <md-datepicker ng-model="flight.date" md-placeholder="Ngày" md-open-on-focus required></md-datepicker>
+            <!--<mdp-date-picker mdp-placeholder="Ngày" ng-model="flight.date"></mdp-date-picker>-->
+        </div>
+        <div>model = {{flight.date}}</div>
+
+        <!--<input type="time" class="timepicker" ng-model="flight.time" required="" placeholder="giờ">-->
+        <mdp-time-picker required ng-model="flight.time"></mdp-time-picker>
+        <div>model = {{flight.time}}</div>
+
         <h5>Thương gia linh hoạt</h5>
-
-        <!--<div class="input-field col s12">-->
-            <!--<select ng-model="flight.info[0].class" onchange="">-->
-                <!--<option value="" disabled selected>Chọn hạng vé</option>-->
-                <!--<option value="F">Hạng nhất</option>-->
-                <!--<option value="B">Hạng thương gia</option>-->
-                <!--<option value="E">Hạng phổ thông</option>-->
-            <!--</select>-->
-            <!--<label>Hạng</label>-->
-        <!--</div>-->
-
-        <!--<input class="form-control" ng-model="flight.info.price" placeholder="Mức giá">-->
-        <input type="number" class="form-control" ng-model="flight.info[0].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[0].class='BF'">
-        <input class="form-control" ng-model="flight.info[0].cost" required="" placeholder="Giá">
+        <md-input-container ng-init="flight.info[0].class='BF'">
+            <label>Số ghế</label>
+            <input required type="number" min="0" ng-model="flight.info[0].total_seat">
+        </md-input-container>
+        <md-input-container>
+            <label>Giá</label>
+            <input required ng-model="flight.info[0].cost">
+        </md-input-container>
 
         <h5>Thương gia tiêu chuẩn</h5>
 
-        <!--<div class="input-field col s12">-->
-            <!--<select ng-model="flight.info[1].class" onchange="">-->
-                <!--<option value="" disabled selected>Chọn hạng vé</option>-->
-                <!--<option value="F">Hạng nhất</option>-->
-                <!--<option value="B">Hạng thương gia</option>-->
-                <!--<option value="E">Hạng phổ thông</option>-->
-            <!--</select>-->
-            <!--<label>Hạng</label>-->
-        <!--</div>-->
-
-        <!--<input class="form-control" ng-model="flight.info.price" placeholder="Mức giá">-->
-        <input type="number" class="form-control" ng-model="flight.info[1].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[1].class='BS'">
-        <input class="form-control" ng-model="flight.info[1].cost" required="" placeholder="Giá">
+        <md-input-container ng-init="flight.info[1].class='BS'">
+            <label>Số ghế</label>
+            <input required type="number" min="0" ng-model="flight.info[1].total_seat">
+        </md-input-container>
+        <md-input-container>
+            <label>Giá</label>
+            <input required ng-model="flight.info[1].cost">
+        </md-input-container>
 
         <h5>Phổ thông linh hoạt</h5>
-        <input type="number" class="form-control" ng-model="flight.info[2].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[2].class='BS'">
-        <input class="form-control" ng-model="flight.info[2].cost" required="" placeholder="Giá">
+        <md-input-container ng-init="flight.info[2].class='EF'">
+            <label>Số ghế</label>
+            <input required type="number" min="0" ng-model="flight.info[2].total_seat">
+        </md-input-container>
+        <md-input-container>
+            <label>Giá</label>
+            <input required ng-model="flight.info[2].cost">
+        </md-input-container>
 
         <h5>Phổ thông tiêu chuẩn</h5>
-        <input type="number" class="form-control" ng-model="flight.info[3].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[3].class='BS'">
-        <input class="form-control" ng-model="flight.info[3].cost" required="" placeholder="Giá">
+        <md-input-container ng-init="flight.info[3].class='ES'">
+            <label>Số ghế</label>
+            <input required type="number" min="0" ng-model="flight.info[3].total_seat">
+        </md-input-container>
+        <md-input-container>
+            <label>Giá</label>
+            <input required ng-model="flight.info[3].cost">
+        </md-input-container>
 
         <h5>Phổ thông tiết kiệm</h5>
-        <input type="number" class="form-control" ng-model="flight.info[4].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[4].class='BS'">
-        <input class="form-control" ng-model="flight.info[4].cost" required="" placeholder="Giá">
+        <md-input-container ng-init="flight.info[4].class='EX'">
+            <label>Số ghế</label>
+            <input required type="number" min="0" ng-model="flight.info[4].total_seat">
+        </md-input-container>
+        <md-input-container>
+            <label>Giá</label>
+            <input required ng-model="flight.info[4].cost">
+        </md-input-container>
 
-        <h5>Phổ thông tiêu chuẩn</h5>
-        <input type="number" class="form-control" ng-model="flight.info[5].total_seat" required="" placeholder="Số ghế" ng-init="flight.info[5].class='BS'">
-        <input class="form-control" ng-model="flight.info[5].cost" required="" placeholder="Giá">
+        <h5>Tiết kiệm đặc biệt</h5>
+        <md-input-container ng-init="flight.info[5].class='SX'">
+            <label>Số ghế</label>
+            <input required type="number" min="0" ng-model="flight.info[5].total_seat">
+        </md-input-container>
+        <md-input-container>
+            <label>Giá</label>
+            <input required ng-model="flight.info[5].cost">
+        </md-input-container>
 
-        <div>model = {{flight.info}}</div><br/>
+        <div>model = {{flight.info}}</div>
+        <br/>
 
-        <button class="btn btn-lg" ng-click="add(flight)" ng-if="!flight._id" type="submit" ng-disabled="!flight_dashboard.$valid">
+        <md-button class="md-raised md-primary" ng-click="add(flight)" ng-if="!flight._id" type="submit"
+                   ng-disabled="!flight_dashboard.$valid">
             <span class="glyphicon glyphicon-plus">Thêm</span>
-        </button>
+        </md-button>
     </form>
 </div>
 
@@ -183,10 +233,15 @@
         toaster-options="{'time-out': 3000, 'close-button':true, 'animation-class': 'toast-top-center'}"></toaster-container>
 
 <script src="javascripts/jquery-3.1.1.min.js"></script>
-<script src="javascripts/materialize.js"></script>
+<!--<script src="javascripts/materialize.js"></script>-->
 <script src="javascripts/angular.min.js"></script>
+<script src="javascripts/moment.js"></script>
 <script src="javascripts/angular-resource.min.js"></script>
+<script src="javascripts/angular-material.js"></script>
+<script src="javascripts/angular-messages.min.js"></script>
 <script src="javascripts/angular-animate.min.js"></script>
+<script src="javascripts/angular-aria.min.js"></script>
+<script src="javascripts/mdPickers.js"></script>
 <script src="javascripts/ngProgress.min.js"></script>
 <script src="javascripts/toaster.js"></script>
 <script src="app/app.js"></script>
