--- a/public/index.html
+++ b/public/index.html
@@ -6,24 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
-<<<<<<< HEAD
-    <!--<link rel="stylesheet" href="stylesheets/materialize.css">-->
-    <link rel="stylesheet" href="stylesheets/ngProgress.css">
-    <link rel="stylesheet" href="stylesheets/toaster.css">
-=======
     <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="stylesheets/daterangepicker.css">
->>>>>>> 7b3809f31468b1122a97fc121c7c84591a48716b
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="stylesheets/angular-material.css">
-    <link rel="stylesheet" href="stylesheets/mdPickers.css">
 </head>
 <body ng-cloak ng-app="app">
-<h1>Admin Dashboard</h1>
+<h1 style="padding-left: 50px">Admin Dashboard</h1>
 
 <div class="container" ng-controller="AirportController">
     <h3>Airports Dashboard</h3>
-
     <form name="airport_dashboard" novalidate>
         <table class="table">
             <thead>
@@ -33,7 +25,6 @@
                 <th></th>
             </tr>
             </thead>
-
             <tbody>
             <tr ng-repeat="item in airports">
                 <td>{{item.airportId}}</td>
@@ -45,33 +36,28 @@
                         </button>
                     </div>
                 </td>
-
             </tr>
 
             <tr>
                 <td>
-                    <!--<input class="form-control" ng-model="airport.airportId" required="" placeholder="Mã sân bay">-->
                     <md-input-container>
                         <label>Mã sân bay</label>
                         <input required ng-model="airport.airportId">
                     </md-input-container>
-
                 </td>
-
                 <td>
-                    <!--<input class="form-control" ng-model="airport.name" placeholder="Tên sân bay" required="">-->
                     <md-input-container>
                         <label>Tên sân bay</label>
                         <input required ng-model="airport.name">
                     </md-input-container>
                 </td>
-            </tr>
-            <tr>
+
                 <td>
                     <md-button class="md-raised md-primary" ng-click="add(airport)" ng-if="!airport._id" type="submit"
                                ng-disabled="!airport_dashboard.$valid">
                         <span class="glyphicon glyphicon-plus">Thêm</span>
                     </md-button>
+
                 </td>
             </tr>
             </tbody>
@@ -82,7 +68,7 @@
 <br>
 
 <div class="container" ng-controller="FlightController">
-    <h4>Flights Dashboard</h4>
+    <h3>Flights Dashboard</h3>
     <form name="flight_dashboard" novalidate>
         <table class="table">
             <thead>
@@ -120,13 +106,22 @@
             </tr>
             </tbody>
         </table>
-<<<<<<< HEAD
+
+        <!--<input class="form-control" ng-model="flight.flightId" required="" placeholder="Mã chuyến bay">-->
         <div>
             <md-input-container>
                 <label>Mã chuyến bay</label>
                 <input required ng-model="flight.flightId">
             </md-input-container>
         </div>
+        <!--<div class="input-field col s12">-->
+            <!--<select ng-model="flight.departure" onchange="">-->
+                <!--<option value="" disabled selected>Chọn sân bay</option>-->
+                <!--<option ng-repeat="item in airports" value="{{item.airportId}}">{{item.name}}({{item.airportId}})-->
+                <!--</option>-->
+            <!--</select>-->
+            <!--<label>Sân bay đi</label>-->
+        <!--</div>-->
         <div>
             <md-input-container style="margin-right: 10px;">
                 <label>Sân bay đi</label>
@@ -138,6 +133,17 @@
             </md-input-container>
         </div>
         <div>model = {{flight.departure}}</div>
+
+        <br/>
+
+        <!--<div class="input-field col s12">-->
+            <!--<select ng-model="flight.arrival">-->
+                <!--<option value="" disabled selected>Chọn sân bay</option>-->
+                <!--<option ng-repeat="item in airports" value="{{item.airportId}}">{{item.name}}({{item.airportId}})-->
+                <!--</option>-->
+            <!--</select>-->
+            <!--<label>Sân bay đi</label>-->
+        <!--</div>-->
         <div>
             <md-input-container style="margin-right: 10px;">
                 <label>Sân bay đến</label>
@@ -149,123 +155,28 @@
             </md-input-container>
         </div>
         <div>model = {{flight.arrival}}</div>
-
-        <!--<input type="date" class="datepicker" ng-model="flight.date" required="" placeholder="ngày">-->
-        <div>
-            <md-datepicker ng-model="flight.date" md-placeholder="Ngày" md-open-on-focus required></md-datepicker>
-            <!--<mdp-date-picker mdp-placeholder="Ngày" ng-model="flight.date"></mdp-date-picker>-->
-        </div>
-        <div>model = {{flight.date}}</div>
-
-        <!--<input type="time" class="timepicker" ng-model="flight.time" required="" placeholder="giờ">-->
-        <mdp-time-picker required ng-model="flight.time"></mdp-time-picker>
-        <div>model = {{flight.time}}</div>
-
-        <h5>Thương gia linh hoạt</h5>
-        <md-input-container ng-init="flight.info[0].class='BF'">
-            <label>Số ghế</label>
-            <input required type="number" min="0" ng-model="flight.info[0].total_seat">
-        </md-input-container>
-        <md-input-container>
-            <label>Giá</label>
-            <input required ng-model="flight.info[0].cost">
-        </md-input-container>
-
-        <h5>Thương gia tiêu chuẩn</h5>
-
-        <md-input-container ng-init="flight.info[1].class='BS'">
-            <label>Số ghế</label>
-            <input required type="number" min="0" ng-model="flight.info[1].total_seat">
-        </md-input-container>
-        <md-input-container>
-            <label>Giá</label>
-            <input required ng-model="flight.info[1].cost">
-        </md-input-container>
-
-        <h5>Phổ thông linh hoạt</h5>
-        <md-input-container ng-init="flight.info[2].class='EF'">
-            <label>Số ghế</label>
-            <input required type="number" min="0" ng-model="flight.info[2].total_seat">
-        </md-input-container>
-        <md-input-container>
-            <label>Giá</label>
-            <input required ng-model="flight.info[2].cost">
-        </md-input-container>
-
-        <h5>Phổ thông tiêu chuẩn</h5>
-        <md-input-container ng-init="flight.info[3].class='ES'">
-            <label>Số ghế</label>
-            <input required type="number" min="0" ng-model="flight.info[3].total_seat">
-        </md-input-container>
-        <md-input-container>
-            <label>Giá</label>
-            <input required ng-model="flight.info[3].cost">
-        </md-input-container>
-
-        <h5>Phổ thông tiết kiệm</h5>
-        <md-input-container ng-init="flight.info[4].class='EX'">
-            <label>Số ghế</label>
-            <input required type="number" min="0" ng-model="flight.info[4].total_seat">
-        </md-input-container>
-        <md-input-container>
-            <label>Giá</label>
-            <input required ng-model="flight.info[4].cost">
-        </md-input-container>
-
-        <h5>Tiết kiệm đặc biệt</h5>
-        <md-input-container ng-init="flight.info[5].class='SX'">
-            <label>Số ghế</label>
-            <input required type="number" min="0" ng-model="flight.info[5].total_seat">
-        </md-input-container>
-        <md-input-container>
-            <label>Giá</label>
-            <input required ng-model="flight.info[5].cost">
-        </md-input-container>
-
-        <div>model = {{flight.info}}</div>
-        <br/>
-
-        <md-button class="md-raised md-primary" ng-click="add(flight)" ng-if="!flight._id" type="submit"
-                   ng-disabled="!flight_dashboard.$valid">
-=======
-
-        <input class="form-control" ng-model="flight.flightId" required="" placeholder="Mã chuyến bay">
-
-        <div class="input-field col s12">
-            <select ng-model="flight.departure" onchange="">
-                <option value="" disabled selected>Chọn sân bay</option>
-                <option ng-repeat="item in airports" value="{{item.airportId}}">{{item.name}}({{item.airportId}})
-                </option>
-            </select>
-            <label>Sân bay đi</label>
-        </div>
-        <div>model = {{flight.departure}}</div>
-
-        <br/>
-
-        <div class="input-field col s12">
-            <select ng-model="flight.arrival">
-                <option value="" disabled selected>Chọn sân bay</option>
-                <option ng-repeat="item in airports" value="{{item.airportId}}">{{item.name}}({{item.airportId}})
-                </option>
-            </select>
-            <label>Sân bay đi</label>
-        </div>
-        <div>model = {{flight.arrival}}</div>
         <br/>
 
         <input type="text" id="datetimepicker"/>
 
         <div ng-repeat="item in info">
             <h5>{{item}}</h5>
-            <input type="number" class="form-control" ng-model="flight.info[$index].total_seat" required=""
-                   placeholder="Số ghế">
-            <input class="form-control" ng-model="flight.info[$index].cost" required="" placeholder="Giá">
+            <!--<input type="number" class="form-control" ng-model="flight.info[$index].total_seat" required=""-->
+                   <!--placeholder="Số ghế">-->
+            <!--<input class="form-control" ng-model="flight.info[$index].cost" required="" placeholder="Giá">-->
+
+            <md-input-container>
+                <label>Số ghế</label>
+                <input required type="number" min="0" ng-model="flight.info[$index].total_seat">
+            </md-input-container>
+            <md-input-container>
+                <label>Giá</label>
+                <input required ng-model="flight.info[$index].cost">
+            </md-input-container>
         </div>
 
-        <button class="btn btn-lg" ng-click="add(flight)" ng-if="!flight._id" type="submit"
-                ng-disabled="!flight_dashboard.$valid">
->>>>>>> 7b3809f31468b1122a97fc121c7c84591a48716b
+        <md-button class="md-raised md-primary" ng-click="add(flight)" ng-if="!flight._id" type="submit"
+                   ng-disabled="!flight_dashboard.$valid">
             <span class="glyphicon glyphicon-plus">Thêm</span>
         </md-button>
     </form>
@@ -276,24 +187,15 @@
         toaster-options="{'time-out': 3000, 'close-button':true, 'animation-class': 'toast-top-center'}"></toaster-container>
 
 <script src="javascripts/jquery-3.1.1.min.js"></script>
-<<<<<<< HEAD
-<!--<script src="javascripts/materialize.js"></script>-->
-=======
->>>>>>> 7b3809f31468b1122a97fc121c7c84591a48716b
 <script src="javascripts/angular.min.js"></script>
-<script src="javascripts/moment.js"></script>
 <script src="javascripts/angular-resource.min.js"></script>
+<script src="javascripts/angular-animate.min.js"></script>
 <script src="javascripts/angular-material.js"></script>
 <script src="javascripts/angular-messages.min.js"></script>
-<script src="javascripts/angular-animate.min.js"></script>
-<<<<<<< HEAD
 <script src="javascripts/angular-aria.min.js"></script>
-<script src="javascripts/mdPickers.js"></script>
-=======
 <script src="javascripts/bootstrap.min.js"></script>
 <script src="javascripts/moment.min.js"></script>
 <script src="javascripts/daterangepicker.js"></script>
->>>>>>> 7b3809f31468b1122a97fc121c7c84591a48716b
 <script src="javascripts/ngProgress.min.js"></script>
 <script src="javascripts/toaster.js"></script>
 <script src="app/app.js"></script>
