update booking + passenger

--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,7 @@
 <script src="app/logout.js"></script>
 <script src="app/airport.js"></script>
 <script src="app/flight.js"></script>
+<script src="app/passenger.js"></script>
+<script src="app/booking.js"></script>
 </body>
 </html>
